# ffmpeg-android-example

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ndkffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ndkffmpeg/: MainActivity.kt  Util.kt
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ndkffmpeg/: ExampleUnitTest.java
ffmpeglib/: CMakeLists.txt  build.gradle
ffmpeglib/src/androidTest/java/com/example/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/: ffmpeg-lib.cpp
ffmpeglib/src/main/java/com/example/ffmpeglib/: FFmpegLib.java
ffmpeglib/src/main/kotlin/com/example/ffmpeglib/: Producer.kt
ffmpeglib/src/test/java/com/example/ffmpeglib/: ExampleUnitTest.java
ffplay/: CMakeLists.txt  build.gradle
ffplay/ffmpeg/include/libswscale/: swscale.h
ffplay/src/androidTest/java/com/example/ffplay/: ExampleInstrumentedTest.java
ffplay/src/main/: AndroidManifest.xml
ffplay/src/main/c/: ffplay.c  ffplay.h  gles.c  jni.c
ffplay/src/main/java/com/example/ffplay/: FFplayJNI.java  MainActivity.java
ffplay/src/main/res/layout/: activity_main.xml
ffplay/src/main/res/menu/: activity_main.xml
ffplay/src/test/java/com/example/ffplay/: ExampleUnitTest.java
ffplay_android_project/: build.gradle
ffplay_android_project/jni/: Application.mk
ffplay_android_project/jni/SDL/: Makefile  config.status
ffplay_android_project/jni/ffmpeg/: Android.mk
ffplay_android_project/jni/ffmpeg/include/libavutil/: ffversion.h
ffplay_android_project/jni/src/: Android.mk  config.h  ffplay.c  main.c
gradle/wrapper/: gradle-wrapper.properties
sdl_android_project/: build.gradle
sdl_android_project/jni/: Application.mk
sdl_android_project/jni/SDL/src/core/android/: SDL_android.c
sdl_android_project/jni/src/: main.c
